Fix: Removed the top gap to account for the transparent header in now playing music playlist on phones

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2333,8 +2333,8 @@ ul.MuiList-root.MuiMenu-list.MuiList-dense>div:first-child {
 }
 
 .layout-mobile .playlistSection .playlist {
-    padding: 2em 0;
-    top: 3.5em;
+    padding: 4.3em 0;
+    top: 0;
     bottom: 4.3em;
     background: color-mix(in srgb, var(--headerColor), var(--darkerGradientPoint) 50%);
     backdrop-filter: var(--blurLargest);
